--- a/test_sgd_fit.ipynb
+++ b/test_sgd_fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
     "import os\n",
     "import numpy as np\n",
     "from code_misc.utils import MyUtils\n",
-    "from code_logistic_regression.logistic_regression import _v_sigmoid, LogisticRegression"
+    "from code_logistic_regression.logistic_regression import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,21 +45,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n"
+      "[(0, 100), (100, 200), (200, 300)]\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 1\n",
+      "\tMini batch 1: X: (100, 35), y: (100, 1)\n",
+      "Batch number index: 2\n",
+      "\tMini batch 2: X: (80, 35), y: (80, 1)\n",
+      "Batch number index: 0\n",
+      "\tMini batch 0: X: (100, 35), y: (100, 1)\n",
+      "26\n"
      ]
     }
    ],
    "source": [
     "max_degree = 1\n",
-    "iterations = 10_000\n",
-    "iteration_step = 1000\n",
+    "iterations = 5\n",
+    "iteration_step = 1\n",
     "mini_batch_size = 100\n",
     "eta = 0.01\n",
     "lam = 0.01\n",
